# neosynth

./: Cargo.toml  build.rs
crates/neosynth/: Cargo.toml
crates/neosynth-remote/: Cargo.toml  build.rs
crates/neosynth-remote/src/: main.rs  main_window.slint
crates/neosynth/src/: latency_test.rs  main.rs  persist.rs
crates/neosynth/src/audio/: callback_thread.rs  engine.rs  meters.rs  mod.rs  parameters.rs  realtime.rs  telemetry.rs  worker_thread.rs
crates/neosynth/src/dsp/: compressor.rs  dsp_toolbox.rs  mixer.rs  mod.rs  stereo_delay.rs  tape_delay.rs  utils.rs
crates/neosynth/src/midi/: mapping.rs  mod.rs  router.rs
crates/neosynth/src/osc/: mod.rs  router.rs
crates/neosynth/src/ui/: channel_strip.slint  main_window.slint  mod.rs  param_panel.slint
packaging/systemd/: neosynth-cage.service  neosynth.service
src/: main.rs  persist.rs
src/audio/: audio_devices.rs  buffer.rs  callback_thread.rs  channels.rs  engine.rs  high_res_timer.rs  meters.rs  mod.rs  parameters.rs  realtime.rs  sample_format.rs  telemetry.rs  xrun.rs
src/dsp/: echo.rs  mixer.rs  mod.rs  output_mixer.rs  param.rs  processing.rs  reverb.rs  utils.rs
src/midi/: device.rs  mapping.rs
src/osc/: mod.rs  router.rs
src/ui/: channel_strip.slint  echo_panel.slint  main_window.slint  mixer_panel.slint  mod.rs  reverb_panel.slint
