[package]
name = "neosynth"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
alsa = "0.9"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
libc = "0.2"
num-traits = "0.2"
ringbuf = "0.4"
rosc = "0.10"
serde = { version = "1", features = ["derive"] }
slint = "1.10"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
slint-build = "1.10"
